package trapeze;
syntax = "proto3";
 
enum VehicleType {
    UNKNOWN = 0;
    BUS = 1;
    TRAM = 2;
}
/**
 * Vehicle Location Information
 */
message VehicleLocation{

    /**
     * Kind of Vehicle
     */
    VehicleType category = 1 [default = 0];
     /**
      * Check if vehicle is Deleted
      */
    required string id = 2;    
     /**
      * Check if vehicle is Deleted
      */
    required bool isDeleted = 3 [default = false];    

    /**
     * Heading of the vehicle in degrees
     */
    uint32 heading = 4;
    /**
     * Timestamp
     */
    required int64 lastUpdate = 5;
    /**
     * Latitude in arcmiliseconds
     */
    int64 latitude = 6;
    /**
     * Longitude in arcmiliseconds
     */
    int64 longitude = 7;
    /**
     * Humanreadable vehicle name
     */
    string name = 8;
    /**
     * Current TripId of the vehicle
     */
    string tripId = 9;
}

message VehicleLocationList{
    /**
     * Timestamp
     */
    int64 lastUpdate = 1;
    /**
     * reported locations
     */
    repeated VehicleLocation vehicles = 2;
}

message VehicleLocationDelta{
    repeated VehicleLocation added = 1;
    repeated VehicleLocation deleted = 2;
    repeated VehicleLocation updated = 3;
}
service SearchService {
    rpc Search (VehicleLocationDelta) returns (VehicleLocationList);
  }